<resources>
    <string name="app_name">暖福乐</string>

    <!--登录界面-->
    <string name="hint_login_tel">请输入手机号</string>
    <string name="hint_login_password">请输入密码</string>
    <string name="log_in">登&#160;&#160;录</string>
    <string name="verfication_login">短信验证登录</string>
    <string name="forget_pw">忘记密码</string>
    <string name="retrieve_pw">找回密码</string>
    <string name="no_account_text">没有账号？</string>
    <string name="register">立即注册</string>

    <!--短信登录界面-->
    <string name="hint_verfication">请输入验证码</string>
    <string name="get_verfication_code">获取验证码</string>

    <!--注册界面-->
    <string name="welcome_register">欢迎注册瀚清</string>
    <string name="hint_register_user">请输入用户名，1-11位</string>
    <string name="hint_register_tel">请输入手机号</string>
    <string name="hint_register_password">请输入密码,1-8位</string>
    <string name="hint_register_pw">请确认密码,1-8位</string>
    <string name="hint_register_id">请输入设备编号</string>
    <string name="hint_register_address">请输入设备地址</string>

    <string name="hint_nation">国家</string>
    <string name="hint_province">省</string>
    <string name="hint_city">市</string>
    <string name="hint_country">区/县</string>
    <string name="hint_town">街道/乡镇</string>
    <string name="hint_detail">详细地址</string>

    <string name="btn_register">立即注册</string>
    <string name="btn_ensure">确&#160;&#160;定</string>

    <!--设备运行详情状态-->
    <string name="item_rename">重命名</string>
    <string name="item_wifi">重置WiFi</string>
    <string name="item_delete">删除设备</string>
    <string name="item_remote">远程操控</string>
    <string name="remote_toggle_button">售后远程操控</string>
    <string name="title_activity_main">暖福乐</string>

    <!--连接设备界面-->
    <string name="connect_device">连接设备</string>
    <string name="wifi_hint">请确保您的手机已接入WiFI</string>
    <string name="fist_operation">1.打开暖气设备</string>
    <string name="second_operation">2.输入wifi密码</string>
    <string name="third_operation">3.切换Wifi，连接暖气设备</string>
    <string name="wifiPw_hint">请输入WiFi密码</string>
    <string name="btn_pairing">开始连接</string>


    <!--导航栏-->
    <string name="title_home">主页</string>
    <string name="title_model">模式</string>
    <string name="title_my">我的</string>

    <!--设备名称（测试用例）-->
    <string name="device_01">客厅</string>
    <string name="device_02">餐厅</string>
    <string name="device_03">卧室</string>

    <!--"我的"界面-->
    <string name="my_address">设备地址</string>
    <string name="my_re_pw">修改密码</string>
    <string name="my_contact_info">联系方式</string>
    <string name="exit">退出登录</string>

    <!--模式界面-->
    <string name="auto_mode">自动模式</string>
    <string name="time_mode">分段模式</string>
    <string name="mode_number">请选择分段模式</string>
    <string name="first_time_frag">时段1</string>
    <string name="second_time_frag">时段2</string>
    <string name="third_time_frag">时段3</string>
    <string name="fourth_time_frag">时段4</string>
    <string name="fifth_time_frag">时段5</string>
    <string name="sixth_time_frag">时段6</string>
    <string name="seventh_time_frag">时段7</string>
    <string name="start">开始:</string>
    <string name="end">结束:</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="temperature">温度:</string>
    <string name="difference">温差:</string>
    <string name="power">功率:</string>
    <string name="degree">℃</string>

    <!--添加设备界面-->
    <string name="new_device_id">设备编号:</string>
    <string name="new_device_name">设备名称:</string>
    <string name="new_device_power">设备功率:</string>
</resources>
