<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context="com.example.naroro.electricHeater.Activity.LoginActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp">

            <ImageView
                android:id="@+id/icon_login_account"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_login_account" />

            <EditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:inputType="phone"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/icon_login_account"
                android:hint="@string/hint_login_tel"
                android:textSize="@dimen/hint_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/icon_login_pw"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_login_pw" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"

                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/icon_login_pw"
                android:hint="@string/hint_login_password"
                android:textSize="@dimen/hint_text_size" />
        </RelativeLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn_border"
            android:text="@string/log_in"
            android:textColor="@color/btn_textColor"
            android:textSize="@dimen/btn_text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="25dp"
            android:paddingRight="40dp">

            <TextView
                android:id="@+id/verfic_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verfication_login"
                android:textColor="@color/text_black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/forget_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/forget_pw"
                android:textColor="@color/text_black"
                android:textSize="20sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:paddingBottom="20dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/register"
                android:text="@string/no_account_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView"
                android:text="@string/register"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </LinearLayout>
</layout>
