<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.naroro.electric_heater.Activity.RetrievePasswordActivity">

    <include layout="@layout/title_retrieve_pw"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp">

            <ImageView
                android:id="@+id/icon_login_account"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_login_account" />

            <EditText
                android:id="@+id/retrieve_pw_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/icon_login_account"
                android:hint="@string/hint_login_tel"
                android:textSize="@dimen/hint_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/icon_register_tel"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_verfication_code" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/icon_register_tel">

                <EditText
                    android:id="@+id/edit_account1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_verfication"
                    android:textSize="@dimen/hint_text_size" />

                <Button
                    android:layout_width="110dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="7dp"
                    android:background="@drawable/verfication_button_bg"
                    android:text="@string/get_verfication_code"
                    android:textColor="@color/veific_code_text"
                    android:textSize="18dp" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/icon_register_pw"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="20dp"
                android:src="@drawable/icon_register_pw" />
            <EditText
                android:id="@+id/pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/icon_register_pw"
                android:hint="@string/hint_register_password"
                android:textSize="@dimen/hint_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/icon_register_pw_re"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="20dp"
                android:src="@drawable/icon_register_pw_re" />
            <EditText
                android:id="@+id/repeatPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/icon_register_pw_re"
                android:hint="@string/hint_register_pw"
                android:textSize="@dimen/hint_text_size" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@color/btn_background"
        android:text="@string/btn_ensure"
        android:textColor="@color/btn_textColor"
        android:textSize="@dimen/btn_text" />

</LinearLayout>
