<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.DeviceConnectActivity">

    <include layout="@layout/title_simple"/>

    <TextView
        android:id="@+id/device_name"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:text="餐&#160;&#160;厅"
        android:textSize="@dimen/text_size"
        android:textColor="@color/text_black"
        android:background="@drawable/textview_border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:text="@string/wifi_hint"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <TextView
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fist_operation"
            android:textSize="@dimen/text_size"
            android:lineSpacingExtra="10dp"
            android:textColor="@color/text_black"/>

        <TextView
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_wifiPw"
            android:textSize="@dimen/text_size"
            android:lineSpacingExtra="10dp"
            android:textColor="@color/text_black"/>

        <TextView
            android:id="@+id/wifi_account"
            android:paddingLeft="40dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="NoVideo"
            android:lineSpacingExtra="10dp"
            android:textColor="#444444"/>

        <EditText
            android:id="@+id/wifi_pw"
            android:layout_marginLeft="35dp"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:paddingRight="20dp"
            android:hint="@string/wifiPw_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_black"/>


    </LinearLayout>


    <Button
        android:id="@+id/start_pairing"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="@dimen/btn_width"
        android:text="@string/btn_pairing"
        android:background="@color/btn_background"
        android:textColor="@color/btn_textColor"
        android:textSize="@dimen/btn_text"
        android:layout_height="wrap_content"/>

</LinearLayout>