<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_verfic_login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:padding="30dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/item_item_margin">

            <ImageView
                android:id="@+id/icon_register_tel"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="@dimen/icon_margin_top"
                android:src="@drawable/icon_register_tel" />
            <EditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:inputType="phone"
                android:layout_marginLeft="@dimen/image_editText_margin"
                android:layout_toRightOf="@id/icon_register_tel"
                android:hint="@string/hint_register_tel"
                android:textSize="@dimen/register_hint_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/item_item_margin">
            <ImageView
                android:id="@+id/icon_register_code"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="@dimen/icon_margin_top"
                android:src="@drawable/icon_verfication_code" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/image_editText_margin"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/icon_register_code">

                <EditText
                    android:id="@+id/verfic_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_verfication"
                    android:textSize="@dimen/register_hint_text_size" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="7dp"
                    android:background="@drawable/verfication_button_bg"
                    android:text="@string/get_verfication_code"
                    android:textColor="@color/veific_code_text"
                    android:textSize="16dp" />
            </RelativeLayout>
        </RelativeLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_border"
        android:text="@string/log_in"
        android:textColor="@color/btn_textColor"
        android:textSize="@dimen/btn_text" />
</LinearLayout>



