<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.naroro.electric_heater.Activity.RegisterActivity">

    <include layout="@layout/title_simple"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp">
            <ImageView
                android:id="@+id/icon_register_user"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="20dp"
                android:src="@drawable/icon_register_user" />
            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/icon_register_user"
                android:hint="@string/hint_register_user"
                android:textSize="@dimen/hint_text_size" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/icon_register_tel"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="20dp"
                android:src="@drawable/icon_register_tel" />
            <EditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:inputType="phone"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/icon_register_tel"
                android:hint="@string/hint_register_tel"
                android:textSize="@dimen/hint_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/icon_register_pw"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="20dp"
                android:src="@drawable/icon_register_pw" />
            <EditText
                android:id="@+id/pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/icon_register_pw"
                android:hint="@string/hint_register_password"
                android:textSize="@dimen/hint_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/icon_register_pw_re"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="20dp"
                android:src="@drawable/icon_register_pw_re" />
            <EditText
                android:id="@+id/repeatPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/icon_register_pw_re"
                android:hint="@string/hint_register_pw"
                android:textSize="@dimen/hint_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/icon_register_address"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="20dp"
                android:src="@drawable/icon_register_address" />
            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:maxLines="5"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/icon_register_address"
                android:hint="@string/hint_register_address"
                android:textSize="@dimen/hint_text_size"/>

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@color/btn_background"
        android:text="@string/btn_register"
        android:textColor="@color/btn_textColor"
        android:textSize="@dimen/btn_text" />
</LinearLayout>
