<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/my_background">


    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/profilr_photo"
        android:layout_marginTop="80dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/my_address"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/my_address"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:id="@+id/address_detail"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_gravity="right"
                android:src="@drawable/right" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="2dp"
            android:background="@color/line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/my_re_pw"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/my_re_pw"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:id="@+id/retrieve_pw"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="right"
                android:src="@drawable/right" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="2dp"
            android:background="@color/line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/my_contact_info"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/my_contact_info"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:id="@+id/contact_info_detail"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="right"
                android:src="@drawable/right" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/exit"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@color/btn_background"
        android:text="@string/exit"
        android:textColor="@color/btn_textColor"
        android:textSize="@dimen/btn_text" />

</LinearLayout>